Improve sprite slicing and fix Windows header output